next prev icon positioned

--- a/index.html
+++ b/index.html
@@ -658,11 +658,11 @@
 						title="YouTube video player" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 						allowfullscreen class="video__holder js-video video__primary"></iframe> -->
-					<img src="assets/img/common/backgrounds/bg.jpg" class="video__primary"
+					<img src="assets/img/common/Video Image/video2.jpg" class="video__primary"
 						alt="Primary Video Thumbnail">
-					<img src="assets/img/common/backgrounds/bg2.jpg" class="video__secondary video__secondary--left"
+					<img src="assets/img/common/Video Image/video1.jpg" class="video__secondary video__secondary--left"
 						alt="Secondary Video Thumbnail">
-					<img src="assets/img/common/backgrounds/clock5.jpg" class="video__secondary video__secondary--right"
+					<img src="assets/img/common/Video Image/video1.jpg" class="video__secondary video__secondary--right"
 						alt="Secondary Video Thumbnail">
 					<span class="video__button"></span>
 				</a>
@@ -1006,15 +1006,15 @@
 						<!-- Member -->
 						<div class="member  ">
 							<div class="member__photo-wrapper">
-								<img src="assets/img/common/person/MAN 1.png" class="member__photo" alt="Member Photo">
+								<img src="assets/img/common/person/WOMAN 2.png" class="member__photo" alt="Member Photo">
 								<div class="member__cover">
 									<blockquote class="member__quote">Ek Nafrat hi hai jisey,Duniya chand Lamho mein
 										jaan Leti hai….Warna, Chahat ka yakin..Dilane mein to Zindagi Beet jaati hai…
 									</blockquote>
 								</div>
 							</div>
-							<h3 class="member__name">Ankit Sharma</h3>
-							<p class="member__position">@ankitsharma</p>
+							<h3 class="member__name">Tanya Das</h3>
+							<p class="member__position">@dastanya</p>
 							<!-- <ul class="member__socials">
 								<li class="member__social">
 									<a href="#" class="member__link">
@@ -1732,7 +1732,7 @@
 					<div class="row">
 						<div class="col-md-24">
 							<!-- Section Title -->
-							<h2 class="section-title section-title--center "> App
+							<h2 class="section-title section-title--center " style="position:relative;top:-21px"> App
 								<span class='section-title__highlight'>Features</span>
 							</h2>
 							<!-- End of Section Title -->
@@ -2396,6 +2396,7 @@
 	<script src="mystyle2/js/jquery.magnific-popup.min.js"></script>
 	<!-- Owl carasol Js -->
 	<script src="mystyle2/js/owl.carousel.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" ></script>
 	<!-- Wow js -->
 	<script src="mystyle2/js/wow.min.js"></script>
 	<!-- Isotope Js -->
