--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 						<h2 class="section-title"> Biggest Platform For Shayari Creators & Writers </h2>
 						<!-- End of Section Title -->
 						<!-- Section Subtitle -->
-						<p class="section-subtitle" style="color:#23034C; font-size: 12px;text-transform:capitalize;">
+						<p class="section-subtitle" style="color:#23034C; font-size: 20px;font-family: 'Open Sans', sans-serif;text-transform:capitalize;">
 							Our mission is to onboard all Poetry
 							Lovers and empower them to build their
 							own audience
@@ -484,9 +484,9 @@
 						<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 						<!-- Screens Preview -->
 						<div class="screens-preview  ">
-							<img src="assets/img/common/backgrounds/HOME VIDEO.png" style="box-shadow:none ;"
+							<img src="assets/img/common/slider/DISCOVER MAIN PAGE.png" style="box-shadow:none ;"
 								class="screens-preview__primary" alt="Primary Screenshot">
-							<img src="assets/img/common/backgrounds/SPLASH SCREEN.png"
+							<img src="assets/img/common/slider/FRONT_SCREENSHOTS (1).png"
 								class="screens-preview__secondary" style="box-shadow:none ;" alt="Secondary Screenshot">
 						</div>
 						<!-- End of Screens Preview -->
@@ -653,7 +653,7 @@
 			</div>
 			<!-- Video -->
 			<div class="video">
-				<a href="https://www.youtube.com/channel/UCYy1ppjK6YJC9FRY5N8D6IA" class="video__holder js-video" target="_blank">
+				<a href="https://www.youtube.com/watch?v=pDgkmP1e8Uo" class="video__holder">
 					<!-- <iframe width="1920px" height="1080px" src="https://www.youtube.com/embed/pDgkmP1e8Uo"
 						title="YouTube video player" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -1734,6 +1734,10 @@
 							<!-- Section Title -->
 							<h2 class="section-title section-title--center " style="position:relative;top:-21px"> App
 								<span class='section-title__highlight'>Features</span>
+								<p class="section-subtitle" style="color:#23034C; font-size: 20px;font-family: 'Open Sans', sans-serif;text-transform:capitalize;">
+									Shayar is powerful with its interesting featuers
+								</p>
+								
 							</h2>
 							<!-- End of Section Title -->
 							<!-- Section Subtitle -->
@@ -1748,7 +1752,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/15+ Categories.png" alt="course" />
 							<div class="course-content">
-								<h2>15+ Categories</h2>
+								<h2  style="font-size: 25px;">15+ Categories</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1761,7 +1765,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/5+ Regional Languages.png" alt="course" />
 							<div class="course-content">
-								<h2>5+ Regional Language</h2>
+								<h2  style="font-size: 25px;">5+ Regional Language</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1775,7 +1779,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Free Library.png" alt="course" />
 							<div class="course-content">
-								<h2>Free Library</h2>
+								<h2  style="font-size: 25px;">Free Library</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1789,7 +1793,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Relates your daily mood.png" alt="course" />
 							<div class="course-content">
-								<h2>Related your daily mood</h2>
+								<h2  style="font-size: 25px;">Related your daily mood</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1802,7 +1806,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Shayari’s in Video, Text or Image .png" alt="course" />
 							<div class="course-content">
-								<h2>Shayari's in video, Text or Images</h2>
+								<h2  style="font-size: 25px;">Shayari's in video, Text or Images</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1815,7 +1819,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Videos of 8s to 60s.png" alt="course" />
 							<div class="course-content">
-								<h2>Videos in 8s to 60s</h2>
+								<h2  style="font-size: 25px;">Videos in 8s to 60s</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1828,7 +1832,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Easy to Use.png" alt="course" />
 							<div class="course-content">
-								<h2>Easy To Use</h2>
+								<h2  style="font-size: 25px;">Easy To Use</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1841,7 +1845,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Follow Top Shayar’s.png" alt="course" />
 							<div class="course-content">
-								<h2>Follow Top Shayari's</h2>
+								<h2  style="font-size: 25px;">Follow Top Shayari's</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1854,7 +1858,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Participate in Battles.png" alt="course" />
 							<div class="course-content">
-								<h2>Participate in Battle</h2>
+								<h2  style="font-size: 25px;">Participate in Battle</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1867,7 +1871,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Easy to Share.png" alt="course" />
 							<div class="course-content">
-								<h2>Easy Earn</h2>
+								<h2  style="font-size: 25px;">Easy Earn</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1880,7 +1884,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Update Profile.png" alt="course" />
 							<div class="course-content">
-								<h2>Update Profile</h2>
+								<h2  style="font-size: 25px;">Update Profile</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1893,7 +1897,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Social community of Shayars.png" alt="course" />
 							<div class="course-content">
-								<h2>Social Community of Shayar</h2>
+								<h2  style="font-size: 25px;">Social Community of Shayar</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
