--- a/index.html
+++ b/index.html
@@ -416,7 +416,8 @@
 						<h2 class="section-title"> Biggest Platform For Shayari Creators & Writers </h2>
 						<!-- End of Section Title -->
 						<!-- Section Subtitle -->
-						<p class="section-subtitle" style="color:#23034C; font-size: 20px;font-family: 'Open Sans', sans-serif;text-transform:capitalize;">
+						<p class="section-subtitle"
+							style="color:#23034C; font-size: 20px;font-family: 'Open Sans', sans-serif;text-transform:capitalize;">
 							Our mission is to onboard all Poetry
 							Lovers and empower them to build their
 							own audience
@@ -533,8 +534,8 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/OPTIONS FOR LOGIN.png" class="accordion__icon"
-										alt="Accordion Icon">
+									<img src="assets/img/common/FAQ/png_icons/OPTIONS FOR LOGIN.png"
+										class="accordion__icon" alt="Accordion Icon">
 									What are the login options available for me?
 								</h3>
 								<div class="accordion__content">
@@ -545,8 +546,8 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/DELETE ACCOUNT.png" class="accordion__icon"
-										alt="Accordion Icon">
+									<img src="assets/img/common/FAQ/png_icons/DELETE ACCOUNT.png"
+										class="accordion__icon" alt="Accordion Icon">
 									How can I delete my Shayar account?
 								</h3>
 								<div class="accordion__content">
@@ -569,8 +570,8 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/OFFENSIVE CONTENT.png" class="accordion__icon"
-										alt="Accordion Icon">
+									<img src="assets/img/common/FAQ/png_icons/OFFENSIVE CONTENT.png"
+										class="accordion__icon" alt="Accordion Icon">
 									How can I report offensive or questionable content?
 								</h3>
 								<div class="accordion__content">
@@ -582,8 +583,8 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/CHANGE MY USERNAME.png" class="accordion__icon"
-										alt="Accordion Icon">
+									<img src="assets/img/common/FAQ/png_icons/CHANGE MY USERNAME.png"
+										class="accordion__icon" alt="Accordion Icon">
 									How can I change my username?
 								</h3>
 								<div class="accordion__content">
@@ -607,8 +608,8 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/LIKE AND COMMENT.png" class="accordion__icon"
-										alt="Accordion Icon">
+									<img src="assets/img/common/FAQ/png_icons/LIKE AND COMMENT.png"
+										class="accordion__icon" alt="Accordion Icon">
 									How can I like and comment on a video?
 
 								</h3>
@@ -654,17 +655,21 @@
 			<!-- Video -->
 			<div class="video">
 				<a href="https://www.youtube.com/watch?v=pDgkmP1e8Uo" class="video__holder">
-					<!-- <iframe width="1920px" height="1080px" src="https://www.youtube.com/embed/pDgkmP1e8Uo"
+				<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/pDgkmP1e8Uo"
+					title="YouTube video player" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen class="video__holder"></iframe> -->
+				<!-- <iframe width="1920px" height="1080px" src="https://www.youtube.com/embed/pDgkmP1e8Uo"
 						title="YouTube video player" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 						allowfullscreen class="video__holder js-video video__primary"></iframe> -->
-					<img src="assets/img/common/Video Image/video2.jpg" class="video__primary"
-						alt="Primary Video Thumbnail">
-					<img src="assets/img/common/Video Image/video1.jpg" class="video__secondary video__secondary--left"
-						alt="Secondary Video Thumbnail">
-					<img src="assets/img/common/Video Image/video1.jpg" class="video__secondary video__secondary--right"
-						alt="Secondary Video Thumbnail">
-					<span class="video__button"></span>
+				<img src="assets/img/common/Video Image/video2.jpg" class="video__primary"
+					alt="Primary Video Thumbnail">
+				<img src="assets/img/common/Video Image/video1.jpg" class="video__secondary video__secondary--left"
+					alt="Secondary Video Thumbnail">
+				<img src="assets/img/common/Video Image/video1.jpg" class="video__secondary video__secondary--right"
+					alt="Secondary Video Thumbnail">
+				<span class="video__button"></span>
 				</a>
 			</div>
 			<!-- End of Video -->
@@ -907,7 +912,8 @@
 						<!-- Member -->
 						<div class="member  ">
 							<div class="member__photo-wrapper">
-								<img src="assets/img/common/person/WOMAN 1.png" class="member__photo" alt="Member Photo">
+								<img src="assets/img/common/person/WOMAN 1.png" class="member__photo"
+									alt="Member Photo">
 								<div class="member__cover">
 									<blockquote class="member__quote">कहने में तो मेरा दिल “एक” है… लेकिन जिसको दिल दिया
 										है “वह हजारों में एक है”…!
@@ -1006,7 +1012,8 @@
 						<!-- Member -->
 						<div class="member  ">
 							<div class="member__photo-wrapper">
-								<img src="assets/img/common/person/WOMAN 2.png" class="member__photo" alt="Member Photo">
+								<img src="assets/img/common/person/WOMAN 2.png" class="member__photo"
+									alt="Member Photo">
 								<div class="member__cover">
 									<blockquote class="member__quote">Ek Nafrat hi hai jisey,Duniya chand Lamho mein
 										jaan Leti hai….Warna, Chahat ka yakin..Dilane mein to Zindagi Beet jaati hai…
@@ -1734,10 +1741,11 @@
 							<!-- Section Title -->
 							<h2 class="section-title section-title--center " style="position:relative;top:-21px"> App
 								<span class='section-title__highlight'>Features</span>
-								<p class="section-subtitle" style="color:#23034C; font-size: 20px;font-family: 'Open Sans', sans-serif;text-transform:capitalize;">
+								<p class="section-subtitle"
+									style="color:#23034C; font-size: 20px;font-family: 'Open Sans', sans-serif;text-transform:capitalize;">
 									Shayar is powerful with its interesting featuers
 								</p>
-								
+
 							</h2>
 							<!-- End of Section Title -->
 							<!-- Section Subtitle -->
@@ -1752,7 +1760,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/15+ Categories.png" alt="course" />
 							<div class="course-content">
-								<h2  style="font-size: 25px;">15+ Categories</h2>
+								<h2 style="font-size: 25px;">15+ Categories</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1765,7 +1773,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/5+ Regional Languages.png" alt="course" />
 							<div class="course-content">
-								<h2  style="font-size: 25px;">5+ Regional Language</h2>
+								<h2 style="font-size: 25px;">5+ Regional Language</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1779,7 +1787,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Free Library.png" alt="course" />
 							<div class="course-content">
-								<h2  style="font-size: 25px;">Free Library</h2>
+								<h2 style="font-size: 25px;">Free Library</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1791,9 +1799,10 @@
 
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Relates your daily mood.png" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Relates your daily mood.png"
+								alt="course" />
 							<div class="course-content">
-								<h2  style="font-size: 25px;">Related your daily mood</h2>
+								<h2 style="font-size: 25px;">Related your daily mood</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1804,9 +1813,10 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Shayari’s in Video, Text or Image .png" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Shayari’s in Video, Text or Image .png"
+								alt="course" />
 							<div class="course-content">
-								<h2  style="font-size: 25px;">Shayari's in video, Text or Images</h2>
+								<h2 style="font-size: 25px;">Shayari's in video, Text or Images</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1819,7 +1829,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Videos of 8s to 60s.png" alt="course" />
 							<div class="course-content">
-								<h2  style="font-size: 25px;">Videos in 8s to 60s</h2>
+								<h2 style="font-size: 25px;">Videos in 8s to 60s</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1832,7 +1842,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Easy to Use.png" alt="course" />
 							<div class="course-content">
-								<h2  style="font-size: 25px;">Easy To Use</h2>
+								<h2 style="font-size: 25px;">Easy To Use</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1845,7 +1855,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Follow Top Shayar’s.png" alt="course" />
 							<div class="course-content">
-								<h2  style="font-size: 25px;">Follow Top Shayari's</h2>
+								<h2 style="font-size: 25px;">Follow Top Shayari's</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1856,9 +1866,10 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Participate in Battles.png" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Participate in Battles.png"
+								alt="course" />
 							<div class="course-content">
-								<h2  style="font-size: 25px;">Participate in Battle</h2>
+								<h2 style="font-size: 25px;">Participate in Battle</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1871,7 +1882,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Easy to Share.png" alt="course" />
 							<div class="course-content">
-								<h2  style="font-size: 25px;">Easy Earn</h2>
+								<h2 style="font-size: 25px;">Easy Earn</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1884,7 +1895,7 @@
 						<div class="course-img">
 							<img src="assets/img/common/Features/APP FEATURES/Update Profile.png" alt="course" />
 							<div class="course-content">
-								<h2  style="font-size: 25px;">Update Profile</h2>
+								<h2 style="font-size: 25px;">Update Profile</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1895,9 +1906,10 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Social community of Shayars.png" alt="course" />
+							<img src="assets/img/common/Features/APP FEATURES/Social community of Shayars.png"
+								alt="course" />
 							<div class="course-content">
-								<h2  style="font-size: 25px;">Social Community of Shayar</h2>
+								<h2 style="font-size: 25px;">Social Community of Shayar</h2>
 								<!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -2400,7 +2412,7 @@
 	<script src="mystyle2/js/jquery.magnific-popup.min.js"></script>
 	<!-- Owl carasol Js -->
 	<script src="mystyle2/js/owl.carousel.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" ></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 	<!-- Wow js -->
 	<script src="mystyle2/js/wow.min.js"></script>
 	<!-- Isotope Js -->
