--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 						</nav>
 						<!-- End of Menu -->
 						<!-- Menu Trigger -->
-						<a class="menu-trigger js-menu-trigger " href='sidr'> </a>
+						<a class="menu-trigger js-menu-trigger " href='sidr'></a>
 						<!-- End of Menu Trigger -->
 					</div>
 				</div>
@@ -507,7 +507,7 @@
 						<ul class="accordion js-accordion ">
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/MAKE VIDEO.png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/MAKE VIDEO.png" class="accordion__icon"
 										alt="Accordion Icon">
 									How can I make a video ?
 								</h3>
@@ -521,7 +521,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/DELETE VIDEO.png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/DELETE VIDEO.png" class="accordion__icon"
 										alt="Accordion Icon">
 									How can I delete my video?
 								</h3>
@@ -534,7 +534,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/OPTIONS FOR LOGIN.png"
+									<img src="assets/img/common/FAQ/OPTIONS FOR LOGIN.png"
 										class="accordion__icon" alt="Accordion Icon">
 									What are the login options available for me?
 								</h3>
@@ -546,7 +546,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/DELETE ACCOUNT.png"
+									<img src="assets/img/common/FAQ/DELETE ACCOUNT.png"
 										class="accordion__icon" alt="Accordion Icon">
 									How can I delete my Shayar account?
 								</h3>
@@ -558,7 +558,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/SHARE .png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/SHARE .png" class="accordion__icon"
 										alt="Accordion Icon">
 									How can I share a Video/Photo Shayari?
 								</h3>
@@ -570,7 +570,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/OFFENSIVE CONTENT.png"
+									<img src="assets/img/common/FAQ/OFFENSIVE CONTENT.png"
 										class="accordion__icon" alt="Accordion Icon">
 									How can I report offensive or questionable content?
 								</h3>
@@ -583,7 +583,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/CHANGE MY USERNAME.png"
+									<img src="assets/img/common/FAQ/CHANGE MY USERNAME.png"
 										class="accordion__icon" alt="Accordion Icon">
 									How can I change my username?
 								</h3>
@@ -595,7 +595,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/EDIT PROFILE.png" class="accordion__icon"
+									<img src="assets/img/common/FAQ/EDIT PROFILE.png" class="accordion__icon"
 										alt="Accordion Icon">
 									How can I edit profile information?
 								</h3>
@@ -608,7 +608,7 @@
 							</li>
 							<li class="accordion__item">
 								<h3 class="accordion__title">
-									<img src="assets/img/common/FAQ/png_icons/LIKE AND COMMENT.png"
+									<img src="assets/img/common/FAQ/LIKE AND COMMENT.png"
 										class="accordion__icon" alt="Accordion Icon">
 									How can I like and comment on a video?
 
@@ -1758,7 +1758,7 @@
 				<div class="home-course-slider owl-carousel owl-theme">
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/15+ Categories.png" alt="course" />
+							<img src="assets/img/common/Features/15+ Categories.png" alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">15+ Categories</h2>
 								<!-- <p>
@@ -1771,7 +1771,7 @@
 
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/5+ Regional Languages.png" alt="course" />
+							<img src="assets/img/common/Features/5+ Regional Languages.png" alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">5+ Regional Language</h2>
 								<!-- <p>
@@ -1785,7 +1785,7 @@
 
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Free Library.png" alt="course" />
+							<img src="assets/img/common/Features/Free Library.png" alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Free Library</h2>
 								<!-- <p>
@@ -1799,7 +1799,7 @@
 
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Relates your daily mood.png"
+							<img src="assets/img/common/Features/Relates your daily mood.png"
 								alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Related your daily mood</h2>
@@ -1813,7 +1813,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Shayari’s in Video, Text or Image .png"
+							<img src="assets/img/common/Features/Shayari in Video, Text or Image.png"
 								alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Shayari's in video, Text or Images</h2>
@@ -1827,7 +1827,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Videos of 8s to 60s.png" alt="course" />
+							<img src="assets/img/common/Features/Videos of 8s to 60s.png" alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Videos in 8s to 60s</h2>
 								<!-- <p>
@@ -1840,7 +1840,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Easy to Use.png" alt="course" />
+							<img src="assets/img/common/Features/Easy to Use.png" alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Easy To Use</h2>
 								<!-- <p>
@@ -1853,7 +1853,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Follow Top Shayar’s.png" alt="course" />
+							<img src="assets/img/common/Features/Follow Top Shayar.png" alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Follow Top Shayari's</h2>
 								<!-- <p>
@@ -1866,7 +1866,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Participate in Battles.png"
+							<img src="assets/img/common/Features/Participate in Battles.png"
 								alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Participate in Battle</h2>
@@ -1880,7 +1880,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Easy to Share.png" alt="course" />
+							<img src="assets/img/common/Features/Easy to Share.png" alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Easy Earn</h2>
 								<!-- <p>
@@ -1893,7 +1893,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Update Profile.png" alt="course" />
+							<img src="assets/img/common/Features/Update Profile.png" alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Update Profile</h2>
 								<!-- <p>
@@ -1906,7 +1906,7 @@
 					</div>
 					<div class="single-home-special-course">
 						<div class="course-img">
-							<img src="assets/img/common/Features/APP FEATURES/Social community of Shayars.png"
+							<img src="assets/img/common/Features/Social community of Shayars.png"
 								alt="course" />
 							<div class="course-content">
 								<h2 style="font-size: 25px;">Social Community of Shayar</h2>
